@@ -1,6 +1,6 @@
 Gem::Specification.new do |s| 
   s.name    = 'attr_encrypted'
-  s.version = '1.0.7'
+  s.version = '1.0.8'
   s.date    = '2009-01-13'
   
   s.summary     = 'Generates attr_accessors that encrypt and decrypt attributes transparently'
